--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
   status = 200
 
 [context.production]
-  command = "npm run build && npm run export"
+  command = "npm run build"
 
 [context.deploy-preview]
   command = "npm run build"
